--- a/Frontend/CSS/style.css
+++ b/Frontend/CSS/style.css
@@ -20,7 +20,7 @@ body h1 {
   z-index: 1;
   color: #e3cf1d;
   -webkit-text-stroke: 5px #1517a4;
-  font-family:  Helvetica, Arial, sans-serif;
+  font-family: monospace;
   font-size: 7rem;
   text-transform: uppercase;
   animation: glow 2s ease-in-out infinite alternate;
